Notebook 3 in Spanish.

--- a/3. Extracción de Features Cuello de Botella.ipynb
+++ b/3. Extracción de Features Cuello de Botella.ipynb
@@ -4,29 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Bottleneck Feature Extraction"
+    "# 3. Extracción de _Features_ Cuello de Botella"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the biggest advantages of transfer learning is that it let us harness the vast amounts of knowledge stored in the layers of the pre-trained models at our disposal. In a world where data is costly in time and money to acquire, this characteristic is quite appealing.\n",
+    "Una de las ventajas más grandes de _transfer learnning_ es que nos permite aprovechar la enorme cantidad de conocimiento almacenado en las capas de los modelos pre-entrenados a nuestra disposición. En un mundo donde obtener data es muy costoso tanto en tiempo como en dinero, esta característica es bastante atractiva.\n",
     "\n",
-    "If we think about it, these pre-trained models can act as excelent feature extractors, if we decide to drop the top of them (which tends to be a fully-connected network used for classification on ImageNet). \n",
+    "Si pensamos al respecto, esto modelos pre-entrenados pueden servir como excelentes extractores de _features_, si decidimos deshacernos de sus últimas capas (las cuales tienen a ser redes totalmente conectadas usadas para clasificar imágenes en ImageNet).\n",
     "\n",
-    "With these features in hand, we can append _any_ machine learning model, including (but not limited to) neural networks, as long as we perform the proper transformations required by the receiving algorithm.\n",
+    "Con estos _features_ en mano, podemos anexar _cualquier_ modelo de machine learning, incluyendo (más no limitados a) redes neuronales, siempre y cuando llevemos a cabo las debidas transformaciones requeridas por el algoritmo receptor.\n",
     "\n",
-    "The features that result from this approach are known as __bottleneck features__."
+    "Los _features_ resultantes de esta metodología se conocen como __features cuello de botella__."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Feature Extractors\n",
+    "## Extractores de _Features_\n",
     "\n",
-    "Although any pre-trained model can act as a feature extractor, in [this](https://github.com/jesus-a-martinez-v/deep-learning-car-detector) project we determined that the pre-trained model that works best for this problem is VGG16, so it is only logical to reuse it here."
+    "Aunque cualquier modelo pre-entranado puede actuar como un extractor de _features_, en [este](https://github.com/jesus-a-martinez-v/deep-learning-car-detector) proyecto determinamos que el que mejor funciona para este problema es VGG16, por lo que es lógico reutilizarlo para este experimento."
    ]
   },
   {
@@ -73,11 +73,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We'll define three feature extractors:\n",
+    "Definiremos tres extractores:\n",
     "\n",
-    "  - **Global Average Pooling Extractor**: For this extractor we are applying a GlobalAveragePooling2D operation to the outputs of the pre-trained model (without the top). A global average pooling calculates, as it name indicates, the average of all the values in an activation map (also known as feature map, kernel or filter map). So, if we have a feature volume of 32 filters of 64x64, we'll get a vector of 32 elements.\n",
-    "  - **Global Max Pooling Extractor**: For this extractor we are applying a GlobalMaxPooling2D operation to the outputs of the pre-trained model (without the top). A global max pooling calculates, as it name indicates, the maximum of all the values in an activation map (also known as feature map, kernel or filter map). So, if we have a feature volume of 32 filters of 64x64, we'll get a vector of 32 elements.\n",
-    "  - **Flatten Extractor**: This is the simplest extractor, as it only reshapes the outputs of the model (without the top) into a very long vector. So, for instance, if we have a feature volume of 32 filters of 64x64, it will produce a vector of 64 * 32 * 32 = 65536 elements."
+    "  - **Global Average Pooling Extractor**: Para este extractor estamos aplicando la operación GlobalAveragePooling2D a las salidas del modelo pre-entrenado (sin las capas superiores). Una agrupación global promediada calcula, como su nombre lo indica, el promedio de los valores en un _feature map_ o kernel. Por tanto, si tenemos un volumen de _features_ con 32 filtros de 64x64, obtendremos un vector de 32 elementos.\n",
+    "  - **Global Max Pooling Extractor**: Para este extractor estamos aplicando la operación GlobalMaxPooling2D a las salidas del modelo pre-entrenado (sin las capas superiores). Una agrupación global maximizada calcula, como su nombre lo indica, el máximo de los valores en un _feature map_ o kernel. Por tanto, si tenemos un volumen de _features_ con 32 filtros de 64x64, obtendremos un vector de 32 elementos.\n",
+    "  - **Flatten Extractor**: Este es el extractor más simple, puesto que sólo reagrupa las salidas del modelo (sin las capas superiores) en un vector muy largo. Así, por ejemplo, para un volumen de _features_ de 32 filtros de 64x64, el resultado será un vector de 64 * 32 * 32 = 65536 elementos."
    ]
   },
   {
@@ -123,20 +123,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset Transforms\n",
+    "## Transformaciones del Conjunto de Datos\n",
     "\n",
-    "With these extractors in place, we can use them to generate a transform of the original dataset. Our goal with this project is to use deep learning to generate good features for more classical machine learning algorithms, such as decision trees, or SVMs.\n",
+    "Con estos extractores definidos, podemos usarlos para generar nuevas versiones, transformaciones del conjunto de datos original. Nuestra meta con este projecto es utilizar deep learning para producir _features_ útiles para algoritmos más clásicos, como árboles de decisión o SVMs.\n",
     "\n",
-    "The original images will be passed through each feature extractor, and the features and labels will be saved in a `.npy` file, which is a format that NumPy likes."
+    "Las imágenes originales pasarán por cada extractor, y los _features_ y etiquetas se almacenarán en archivos `.npy`, el cual es un formato del agrado de NumPy."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Helpers\n",
+    "### Funciones Auxiliares\n",
     "\n",
-    "These two functions will let us load an image, convert it into a tensor and pre-process it the way VGG16 expects them to be pre-processed."
+    "Estas dos funciones nos permitirán cargar una imagen, volverla un tensor y pre-procesarla de la manera que VGG16 espera."
    ]
   },
   {
@@ -163,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before transforming all the data, let's make sure everything is working with just a couple of images."
+    "Antes de transformar todos los datos, asegurémonos de que las cosas funcionan como deberían. Para ello, usaremos sólo unas cuantas imágenes."
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That shape above correspond to the batch we'll pass to each feature extractor."
+    "Esas dimensiones de arriba corresponden al lote que pasaremos a cada extractor."
    ]
   },
   {
@@ -228,16 +228,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can notice that the Flatten Extractor, as expected, generates the longest representation of the images, as it does not summarize anything, unlike the other two extractors."
+    "Podemos apreciar que el Flatten Extractor, como esperábamos, es el que produce la representación más larga de las imánges de entrada, puesto que su operación no resume la información contenida en ellas, a diferencia de los otros dos."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Generating the Three Versions of the Data\n",
+    "### Generando las Tres Versiones de los Datos\n",
     "\n",
-    "We are now good to go! Let's generate each transform."
+    "¡Estamos listos! ¡Generemos las transformaciones!"
    ]
   },
   {
@@ -372,7 +372,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With these transforms we can now proceed to evaluate different models using each of them."
+    "Con estas versiones de los datos podemos ahora pasar al proceso de evaluar diferentes algoritmos con cada una de ellas."
    ]
   }
  ],
