Notebook 4.1 in Spanish. Also fixes some typos.

--- a/4.2. Model Evaluation (Global Max Pooling).ipynb
+++ b/4.2. Model Evaluation (Global Max Pooling).ipynb
@@ -226,8 +226,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -467,11 +469,11 @@
     "\n",
     "It's noticeable that SVC performs so bad when using a polynomial kernel instead of a linear one.\n",
     "\n",
-    "We see that the better performes are just variations of SVC with polynomial kernel and different C values. \n",
+    "We see that the better performs are just variations of SVC with linear kernel and different C values. \n",
     "\n",
     "However, for diversity sake, we will promote the following five models to the optimization phase:\n",
     "\n",
-    " - Rank=1, Name=**SCV-linear-0.4**, Score=**0.9877151685937721 (+/- 0.003806562050586554)**\n",
+    " - Rank=1, Name=**SVC-linear-0.4**, Score=**0.9877151685937721 (+/- 0.003806562050586554)**\n",
     " - Rank=4, Name=**PassiveAggressiveClassifier**, Score=**0.9873060780235428 (+/- 0.005755384960731155)**\n",
     " - Rank=11, Name=**SGDClassifier**, Score=**0.986486033144723 (+/- 0.005575110872674419)**\n",
     " - Rank=14, Name=**KNeighborsClassifier-1**, Score=**0.9833439566419908 (+/- 0.007040876080775306)**\n",
