Adds optimization notebooks.

--- a/4.1. Evaluación de Modelos (Global Average Pooling).ipynb
+++ b/4.1. Evaluación de Modelos (Global Average Pooling).ipynb
@@ -222,7 +222,7 @@
    "source": [
     "### Resumen\n",
     "\n",
-    "Teniendo todos los datos necesarios a disposición es importante para tomar una decisión. Esta es la misión de la función `summarize_results`. Devuelve los N mejores modelos en términos de desempeño. También produce, opcionalmente, un _box-plot_ para una referencia visualmente más atractiva."
+    "Tener todos los datos necesarios a disposición es importante para tomar una decisión. Esta es la misión de la función `summarize_results`. Devuelve los N mejores modelos en términos de desempeño. También produce, opcionalmente, un _box-plot_ para una referencia visualmente más atractiva."
    ]
   },
   {
@@ -471,14 +471,13 @@
     "\n",
     "Debemos destacar que los modelos que mejor lo hacen son variaciones de SVC con kernel lineal y diferentes valores de penalización (C).\n",
     "\n",
-    "No obstante, en pos de la diversidad, promoveremos los siguientes cinco modelos a la fase de optimización:\n",
+    "No obstante, en pos de la diversidad, promoveremos los siguientes cuatro modelos a la fase de optimización:\n",
     "\n",
     " - Rank=1, Name=**SVC-linear-1.0**, Score=**0.9934480277920665 (+/- 0.003944167917138149)**\n",
     " - Rank=9, Name=**SGDClassifier**, Score=**0.9916728170032577 (+/- 0.004665749258440611)**\n",
     " - Rank=11, Name=**RidgeClassifier-0.8**, Score=**0.9912639128068644 (+/- 0.004574692652304791)**\n",
     " - Rank=24, Name=**KNeighborsClassifier-4**, Score=**0.9892162234696844 (+/- 0.00614647322899209)**\n",
-    " - Rank=48, Name=**GradientBoostingClassifier-100**, Score=**0.983756774688942 (+/- 0.008554217473921419)**\n",
-    "\n",
+    " \n",
     "Debemos recordar que estos modelos ya están rindiendo bastante bien con nuestra selección inicial de parámetros, pero, de todas formas, intentaremos exprimirles la mayor cantidad de desempeño que podamos."
    ]
   },
