--- a/4.2. Evaluación de Modelos (Global Max Pooling).ipynb
+++ b/4.2. Evaluación de Modelos (Global Max Pooling).ipynb
@@ -471,16 +471,22 @@
     "\n",
     "Debemos destacar que los modelos que mejor lo hacen son variaciones de SVC con kernel lineal y diferentes valores de penalización (C).\n",
     "\n",
-    "No obstante, en pos de la diversidad, promoveremos los siguientes cinco modelos a la fase de optimización:\n",
+    "No obstante, en pos de la diversidad, promoveremos los siguientes cuatro modelos a la fase de optimización:\n",
     "\n",
     " - Rank=1, Name=**SVC-linear-0.4**, Score=**0.9877151685937721 (+/- 0.003806562050586554)**\n",
     " - Rank=4, Name=**PassiveAggressiveClassifier**, Score=**0.9873060780235428 (+/- 0.005755384960731155)**\n",
     " - Rank=11, Name=**SGDClassifier**, Score=**0.986486033144723 (+/- 0.005575110872674419)**\n",
     " - Rank=14, Name=**KNeighborsClassifier-1**, Score=**0.9833439566419908 (+/- 0.007040876080775306)**\n",
-    " - Rank=28, Name=**AdaBoostClassifier-100**, Score=**0.9807544785632814 (+/- 0.007702413877307419)**\n",
     "\n",
     "Debemos recordar que estos modelos ya están rindiendo bastante bien con nuestra selección inicial de parámetros, pero, de todas formas, intentaremos exprimirles la mayor cantidad de desempeño que podamos."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
