--- a/4.2. Model Evaluation (Global Max Pooling).ipynb
+++ b/4.2. Model Evaluation (Global Max Pooling).ipynb
@@ -471,14 +471,13 @@
     "\n",
     "We see that the better performs are just variations of SVC with linear kernel and different C values. \n",
     "\n",
-    "However, for diversity sake, we will promote the following five models to the optimization phase:\n",
+    "However, for diversity sake, we will promote the following four models to the optimization phase:\n",
     "\n",
     " - Rank=1, Name=**SVC-linear-0.4**, Score=**0.9877151685937721 (+/- 0.003806562050586554)**\n",
     " - Rank=4, Name=**PassiveAggressiveClassifier**, Score=**0.9873060780235428 (+/- 0.005755384960731155)**\n",
     " - Rank=11, Name=**SGDClassifier**, Score=**0.986486033144723 (+/- 0.005575110872674419)**\n",
     " - Rank=14, Name=**KNeighborsClassifier-1**, Score=**0.9833439566419908 (+/- 0.007040876080775306)**\n",
-    " - Rank=28, Name=**AdaBoostClassifier-100**, Score=**0.9807544785632814 (+/- 0.007702413877307419)**\n",
-    "\n",
+    " \n",
     "We must take into account that these models are already performing really well with our initial choice of parameters, but either way, we'll try to squeeze as much performance out of them as possible."
    ]
   },
